# oec-asplos20-artifact

./: .gitignore  CHANGELOG.md  NOTICE  README.md
artifacts/: README.md
artifacts/csfp-base/: README.md
artifacts/csfp-base/scripts/: README.md  run_csfp_base_sims.sh
artifacts/csfp-base/source/: CMakeLists.txt  csfp-base.cpp
artifacts/csfp-mcap/: README.md
artifacts/csfp-mcap/scripts/: README.md  run_csfp_mcap_sims.sh
artifacts/csfp-mcap/source/: CMakeLists.txt  csfp-mcap.cpp
artifacts/csfp-mpow/: README.md
artifacts/csfp-mpow/scripts/: README.md  run_csfp_mpow_sims.sh
artifacts/csfp-mpow/source/: CMakeLists.txt  csfp-mpow.cpp
artifacts/csfp-mprc/: README.md
artifacts/csfp-mprc/scripts/: README.md  run_csfp_mprc_sims.sh
artifacts/csfp-mprc/source/: CMakeLists.txt  csfp-mprc.cpp
artifacts/cstp-base/: README.md
artifacts/cstp-base/scripts/: README.md  run_cstp_base_sims.sh
artifacts/cstp-base/source/: CMakeLists.txt  cstp-base.cpp
artifacts/cstp-mcap/: README.md
artifacts/cstp-mcap/scripts/: README.md  run_cstp_mcap_sims.sh
artifacts/cstp-mcap/source/: CMakeLists.txt  cstp-mcap.cpp
artifacts/cstp-mpow/: README.md
artifacts/cstp-mpow/scripts/: README.md  run_cstp_mpow_sims.sh
artifacts/cstp-mpow/source/: CMakeLists.txt  cstp-mpow.cpp
artifacts/cstp-mprc/: README.md
artifacts/cstp-mprc/scripts/: README.md  run_cstp_mprc_sims.sh
artifacts/cstp-mprc/source/: CMakeLists.txt  cstp-mprc.cpp
artifacts/fsfp-base/: README.md
artifacts/fsfp-base/scripts/: README.md  run_fsfp_base_sims.sh
artifacts/fsfp-base/source/: CMakeLists.txt  fsfp-base.cpp
artifacts/fsfp-mcap/: README.md
artifacts/fsfp-mcap/scripts/: README.md  run_fsfp_mcap_sims.sh
artifacts/fsfp-mcap/source/: CMakeLists.txt  fsfp-mcap.cpp
artifacts/fsfp-mpow/: README.md
artifacts/fsfp-mpow/scripts/: README.md  run_fsfp_mpow_sims.sh
artifacts/fsfp-mpow/source/: CMakeLists.txt  fsfp-mpow.cpp
artifacts/fsfp-mprc/: README.md
artifacts/fsfp-mprc/scripts/: README.md  run_fsfp_mprc_sims.sh
artifacts/fsfp-mprc/source/: CMakeLists.txt  fsfp-mprc.cpp
artifacts/fstp-base/: README.md
artifacts/fstp-base/scripts/: README.md  run_fstp_base_sims.sh
artifacts/fstp-base/source/: CMakeLists.txt  fstp-base.cpp
artifacts/fstp-mcap/: README.md
artifacts/fstp-mcap/scripts/: README.md  run_fstp_mcap_sims.sh
artifacts/fstp-mcap/source/: CMakeLists.txt  fstp-mcap.cpp
artifacts/fstp-mpow/: README.md
artifacts/fstp-mpow/scripts/: README.md  run_fstp_mpow_sims.sh
artifacts/fstp-mpow/source/: CMakeLists.txt  fstp-mpow.cpp
artifacts/fstp-mprc/: README.md
artifacts/fstp-mprc/logs/: README.md
artifacts/fstp-mprc/scripts/: README.md  run_fstp_mprc_sims.sh
artifacts/fstp-mprc/source/: CMakeLists.txt  fstp-mprc.cpp
artifacts/sim-common/: README.md
artifacts/sim-common/sat/: spacex.tle  spire.tle
artifacts/sim-cs/: README.md
artifacts/sim-cs/scripts/: populate_rx.py  prep_cs_scenarios.sh  run_cs_scenarios.sh
artifacts/sim-cs/source/: CMakeLists.txt  close-spaced.cpp
artifacts/sim-fs/: README.md
artifacts/sim-fs/scripts/: README.md  generate_data_directories.sh  populate_gnd_unis.py  prep_fs_scenarios.sh  run_fs_scenarios.sh
artifacts/sim-fs/source/: CMakeLists.txt  frame-spaced.cpp
artifacts/sim-os/: README.md
artifacts/sim-os/data/: README.md
artifacts/sim-os/scripts/: populate_gnd_ring.py  populate_gnd_unis.py  populate_tx.py  prep_os_scenarios.sh  run_os_scenarios.sh
artifacts/sim-os/source/: CMakeLists.txt  orbit-spaced.cpp
plots/: README.md
scripts/: README.md  collate_downlink_deficit.py  csfp_coverage.py  csfp_latency.py  cstp_coverage.py  cstp_latency.py  fsfp_coverage.py  fsfp_latency.py  fstp_coverage.py  fstp_latency.py  generate_f6_plots.sh  generate_f7_plots.sh  generate_f8_plots.sh  generate_plots.sh  plot_f6a.py  plot_f6b.py  plot_f6c.py  plot_f7a.py  plot_f7b.py  plot_f7c.py  plot_f7d.py  plot_f8a.py  plot_f8b.py  plot_f8c.py  plot_f8d.py  process_f6_logs.sh  process_f7_f8_logs.sh  process_logs.sh  run_csfp_sims.sh  run_cstp_sims.sh  run_fsfp_sims.sh  run_fstp_sims.sh  run_sims_cs.sh  run_sims_fs.sh  run_sims_os.sh  setup_dependencies.sh  setup_py_venv.sh
software/: README.md
software/comsim/: README.md
software/comsim/channel/: README.md
software/comsim/channel-type/: README.md
software/comsim/channel-type/include/: ChannelType.hpp
software/comsim/channel/include/: Channel.hpp
software/comsim/channel/source/: Channel.cpp
software/comsim/channel/test/: CMakeLists.txt  test-channel.cpp
software/comsim/constants/: README.md
software/comsim/date-time/: README.md
software/comsim/edge/: README.md
software/comsim/edge/test/: CMakeLists.txt  test-edge.cpp
software/comsim/ground-station/: README.md
software/comsim/log/: README.md
software/comsim/log-level/: README.md
software/comsim/receive/: README.md
software/comsim/satellite/: README.md
software/comsim/sensor/: README.md
software/comsim/transmit/: README.md
software/comsim/utilities/: README.md
software/comsim/vertex/: README.md
software/satsim/: README.md
software/satsim/capacitor/: README.md
software/satsim/chameleon-imager/: README.md
software/satsim/eh-satellite/: README.md
software/satsim/eh-satellite/test/: CMakeLists.txt  test-eh-satellite.cpp
software/satsim/eh-system/: README.md
software/satsim/energy-consumer/: README.md
software/satsim/energy-harvester/: README.md
software/satsim/energy-storage/: README.md
software/satsim/ilog/: README.md
software/satsim/isim/: README.md
software/satsim/iwork/: README.md
software/satsim/jetson-tx2/: README.md
software/satsim/jetson-tx4/: README.md
software/satsim/jetson-tx4/test/: CMakeLists.txt  test-jetson-tx4.cpp
software/satsim/job/: README.md
software/satsim/logger/: README.md
software/satsim/mai-adacs/: README.md
software/satsim/orbit/: README.md
software/satsim/satellite/: README.md
software/satsim/simple-solar-cell/: README.md
software/satsim/simple-solar-cell/test/: CMakeLists.txt  test-simple-solar-cell.cpp
software/satsim/xlink/: README.md
(+102 files in other folders)
